--- a/css/style.css
+++ b/css/style.css
@@ -1,185 +1,374 @@
-body {
-  margin: 0;
-  font-family: 'Montserrat', sans-serif;
-  background-color: #81DAF5;
-}
-
-.logo {
-  padding-top: 40px;
-}
-
 #login-screen {
-  background-color: #81DAF5;
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-}
-
-.title{
-  font-size: 30px;
-  font-weight: bold;
-  justify-content: center;
-  text-shadow: 3px 2px #D8D8D8;
-  font-style: italic;
-  font-variant: small-caps;
-}
-
-.login-btn {
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 200px;
-  height: 60px;
-  border: solid 2px;
-  border-color: #000;
-  border-radius: 50px;
-  font-size: 20px;
-  cursor: pointer;
-  transition: all .75s ease;
-}
-
-.login-btn:hover {
-  background-color: #000000;
-  border-color: #000000;
-  transform: scale(1.1);
-  color: #fff;
-}
+  animation: colorchange 50s infinite;
+  -webkit-animation: colorchange 50s infinite; }
+@keyframes colorchange {
+  0% {
+    background: #9FF781; }
+  25% {
+    background: #819FF7; }
+  50% {
+    background: #F3F781; }
+  75% {
+    background: #F5DA81; }
+  100% {
+    background: #F7BE81; } }
+@-webkit-keyframes {
+  0% {
+    background: #9FF781; }
+  25% {
+    background: #819FF7; }
+  50% {
+    background: #F3F781; }
+  75% {
+    background: #F5DA81; }
+  100% {
+    background: #F7BE81; } }
+  #login-screen .logo {
+    padding-top: 40px; }
+  #login-screen .login-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: auto;
+    height: 60px;
+    border: solid 2px;
+    border-color: #0e0f11;
+    border-radius: 50px;
+    font-size: 20px;
+    cursor: pointer;
+    transition: all 0.75s ease; }
+    #login-screen .login-btn:hover {
+      background-color: #9FF781;
+      border-color: #F7BE81;
+      transform: scale(1.1);
+      color: #F7BE81; }
+  #login-screen .title {
+    font-size: 30px;
+    font-weight: bold;
+    color: #0e0f11;
+    justify-content: center;
+    text-shadow: 2px 1px #D8D8D8;
+    font-style: italic;
+    font-variant: small-caps; }
+  #login-screen .gretting {
+    padding: 1cm; }
 
 .label {
   padding: 30px;
-}
+  color: #202331; }
 
-#messages {
-  flex: 1;
-  padding: 15px;
-  overflow-y: auto;
-  font-size: 20px;
-}
-
-.input-container {
-  background-color: #D8D8D8;
+.chat-screen-content {
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-flow: row;
-  -webkit-box-shadow: 0px -1px 10px 0px rgba(181, 181, 181, 1);
-  -moz-box-shadow: 0px -1px 10px 0px rgba(181, 181, 181, 1);
-  box-shadow: 0px -1px 10px 0px rgba(181, 181, 181, 1);
-}
+  flex-direction: column;
+  justify-content: space-between; }
+  .chat-screen-content .header {
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    font-size: 20px;
+    font-weight: bold;
+    justify-content: center;
+    align-items: center;
+    height: 70px; }
+  .chat-screen-content .messages {
+    flex: 1;
+    padding: 15px;
+    overflow-y: auto;
+    font-size: 20px; }
+  .chat-screen-content .input-container {
+    background-color: #000;
+    display: flex;
+    flex-flow: row;
+    -webkit-box-shadow: 0px -1px 10px 0px #b5b5b5;
+    -moz-box-shadow: 0px -1px 10px 0px #b5b5b5;
+    box-shadow: 0px -1px 10px 0px #b5b5b5; }
+    .chat-screen-content .input-container .input-msg {
+      margin: 10px 0px 10px 10px;
+      border: solid 1px #999;
+      border-radius: 50px;
+      font-size: 26px;
+      padding: 0px 5px;
+      height: 50px;
+      flex: 1;
+      outline-style: none; }
+    .chat-screen-content .input-container .send-btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-grow: 1; }
+      .chat-screen-content .input-container .send-btn i.ion-ios-paperplane-outline {
+        font-size: 50px;
+        color: #fff; }
+      .chat-screen-content .input-container .send-btn:hover i.ion-ios-paperplane-outline {
+        color: lightblue; }
 
-#input-msg {
-  margin: 10px 0px 10px 10px;
-  border: solid 1px #999;
-  border-radius: 50px;
-  font-size: 26px;
-  padding: 0px 5px;
-  height: 50px;
-  flex: 1;
-  outline-style: none;
-}
+body {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  background-color: lightblue;
+  background: -webkit-linear-gradient(45deg, #F3F781, #BEF781, #81BEF7);
+  background: -ms-linear-gradient(45deg, #F3F781, #BEF781, #81BEF7);
+  background: linear-gradient(45deg, #F3F781, #BEF781, #81BEF7);
+  overflow-x: hidden; }
 
-#header {
-  background-color: #D8D8D8;
-  color: #0000;
-  display: flex;
-  font-size: 20px;
-  font-weight: bold;
-  justify-content: center;
-  align-items: center;
-  height: 70px;
-}
+#background-wrap {
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  height: 100vh;
+  right: 0;
+  top: 0; }
 
-.send-btn:hover i.ion-ios-paperplane-outline {
-  color: lightblue;
-}
+/* KEYFRAMES */
+@-webkit-keyframes animateBubble {
+  0% {
+    margin-top: 1000px; }
+  100% {
+    margin-top: -100%; } }
+@-moz-keyframes animateBubble {
+  0% {
+    margin-top: 1000px; }
+  100% {
+    margin-top: -100%; } }
+@keyframes animateBubble {
+  0% {
+    margin-top: 1000px; }
+  100% {
+    margin-top: -100%; } }
+@-webkit-keyframes sideWays {
+  0% {
+    margin-left: 0px; }
+  100% {
+    margin-left: 50px; } }
+@-moz-keyframes sideWays {
+  0% {
+    margin-left: 0px; }
+  100% {
+    margin-left: 50px; } }
+@keyframes sideWays {
+  0% {
+    margin-left: 0px; }
+  100% {
+    margin-left: 50px; } }
+/* ANIMATIONS */
+.x1 {
+  -webkit-animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  animation: animateBubble 25s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  left: -5%;
+  top: 5%;
+  -webkit-transform: scale(0.6);
+  -moz-transform: scale(0.6);
+  transform: scale(0.6); }
+
+.x2 {
+  -webkit-animation: animateBubble 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  animation: animateBubble 20s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  left: 5%;
+  top: 80%;
+  -webkit-transform: scale(0.4);
+  -moz-transform: scale(0.4);
+  transform: scale(0.4); }
+
+.x3 {
+  -webkit-animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  animation: animateBubble 28s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  left: 10%;
+  top: 40%;
+  -webkit-transform: scale(0.7);
+  -moz-transform: scale(0.7);
+  transform: scale(0.7); }
+
+.x4 {
+  -webkit-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+  animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+  left: 20%;
+  top: 0;
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  transform: scale(0.3); }
+
+.x5 {
+  -webkit-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  left: 30%;
+  top: 50%;
+  -webkit-transform: scale(0.5);
+  -moz-transform: scale(0.5);
+  transform: scale(0.5); }
+
+.x6 {
+  -webkit-animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  animation: animateBubble 21s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  left: 50%;
+  top: 0;
+  -webkit-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  transform: scale(0.8); }
+
+.x7 {
+  -webkit-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  animation: animateBubble 20s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  left: 65%;
+  top: 70%;
+  -webkit-transform: scale(0.4);
+  -moz-transform: scale(0.4);
+  transform: scale(0.4); }
+
+.x8 {
+  -webkit-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+  animation: animateBubble 22s linear infinite, sideWays 3s ease-in-out infinite alternate;
+  left: 80%;
+  top: 10%;
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  transform: scale(0.3); }
+
+.x9 {
+  -webkit-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  animation: animateBubble 29s linear infinite, sideWays 4s ease-in-out infinite alternate;
+  left: 90%;
+  top: 50%;
+  -webkit-transform: scale(0.6);
+  -moz-transform: scale(0.6);
+  transform: scale(0.6); }
+
+.x10 {
+  -webkit-animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  -moz-animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  animation: animateBubble 26s linear infinite, sideWays 2s ease-in-out infinite alternate;
+  left: 80%;
+  top: 80%;
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  transform: scale(0.3); }
+
+/* OBJECTS */
+.bubble {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px white;
+  -moz-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px white;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2), inset 0px 10px 30px 5px white;
+  height: 200px;
+  position: absolute;
+  width: 200px; }
+
+.bubble:after {
+  background: -moz-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 70%);
+  /* FF3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255, 255, 255, 0.5)), color-stop(70%, rgba(255, 255, 255, 0)));
+  /* Chrome,Safari4+ */
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 70%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 70%);
+  /* Opera 12+ */
+  background: -ms-radial-gradient(center, ellipse cover, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 70%);
+  /* IE10+ */
+  background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 70%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#00ffffff',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
+  -moz-box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
+  box-shadow: inset 0 20px 30px rgba(255, 255, 255, 0.3);
+  content: "";
+  height: 180px;
+  left: 10px;
+  position: absolute;
+  width: 180px; }
 
 .right {
   flex-flow: row-reverse;
-  text-align: right;
-}
+  text-align: right; }
 
 .left {
   flex-flow: row;
-  text-align: left;
-}
+  text-align: left; }
 
 .msg-div {
   font-family: 'Montserrat', sans-serif;
   padding: 15px 0;
   font-size: 24px;
-  display: flex;
-}
+  display: flex; }
 
 .name {
   font-size: 15px;
-  color: #bcb7b7;
-}
+  color: #bcb7b7; }
 
 .msg {
-  word-wrap: break-word;
-}
+  word-wrap: break-word; }
 
 .profile-img {
   height: 50px;
   width: auto;
-  border-radius: 50px;
-}
+  border-radius: 50px; }
 
 .date {
   padding-top: 5px;
   display: flex;
   justify-content: space-between;
   font-size: 12px;
-  color: #bcb7b7;
-}
+  color: #bcb7b7; }
 
-i.ion-ios-paperplane-outline {
-  font-size: 50px;
-  color: #0000;
-}
-
+/* Scroll Bar */
 .cool-scroll-bar-17::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: rgba(0, 0, 0, 0);
-  border-radius: 10px;
-}
+  border-radius: 10px; }
 
 .cool-scroll-bar-17::-webkit-scrollbar {
   width: 6px;
-  background-color: rgba(0, 0, 0, 0);
-}
+  background-color: rgba(0, 0, 0, 0); }
 
 .cool-scroll-bar-17::-webkit-scrollbar-thumb {
   background-color: rgba(255, 178, 178, 0.72);
-  border-radius: 10px;
-}
+  border-radius: 10px; }
 
+/* Bubbles */
+/* container */
 .container {
-  padding: 5% 5%;
-}
+  padding: 5% 5%; }
 
+/* CSS talk bubble */
 .talk-bubble {
+  border-radius: 20px 20px 10px 0;
   z-index: 10;
   margin: 0px;
   display: inline-block;
   position: relative;
-  width: 200px;
   height: auto;
-  background-color: lightyellow;
-}
+  background-color: #fff; }
 
 .border {
-  border: 8px solid #666;
-}
+  border: 8px solid #666; }
 
 .round {
   border-radius: 30px;
   -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-}
+  -moz-border-radius: 30px; }
 
+/* Right triangle placed top left flush. */
 .tri-right.border.left-top:before {
   content: ' ';
   position: absolute;
@@ -190,8 +379,7 @@ i.ion-ios-paperplane-outline {
   top: -8px;
   bottom: auto;
   border: 32px solid;
-  border-color: #666 transparent transparent transparent;
-}
+  border-color: #666 transparent transparent transparent; }
 
 .tri-right.left-top:after {
   z-index: -1;
@@ -204,9 +392,9 @@ i.ion-ios-paperplane-outline {
   top: 0px;
   bottom: auto;
   border: 22px solid;
-  border-color: lightyellow transparent transparent transparent;
-}
+  border-color: #fff transparent transparent transparent; }
 
+/* Right triangle, left side slightly down */
 .tri-right.border.left-in:before {
   content: ' ';
   position: absolute;
@@ -217,8 +405,7 @@ i.ion-ios-paperplane-outline {
   top: 30px;
   bottom: auto;
   border: 20px solid;
-  border-color: #666 #666 transparent transparent;
-}
+  border-color: #666 #666 transparent transparent; }
 
 .tri-right.left-in:after {
   content: ' ';
@@ -230,9 +417,9 @@ i.ion-ios-paperplane-outline {
   top: 38px;
   bottom: auto;
   border: 12px solid;
-  border-color: lightyellow lightyellow transparent transparent;
-}
+  border-color: #fff #fff transparent transparent; }
 
+/*Right triangle, placed bottom left side slightly in*/
 .tri-right.border.btm-left:before {
   content: ' ';
   position: absolute;
@@ -243,8 +430,7 @@ i.ion-ios-paperplane-outline {
   top: auto;
   bottom: -40px;
   border: 32px solid;
-  border-color: transparent transparent transparent #666;
-}
+  border-color: transparent transparent transparent #666; }
 
 .tri-right.btm-left:after {
   content: ' ';
@@ -256,9 +442,9 @@ i.ion-ios-paperplane-outline {
   top: auto;
   bottom: -20px;
   border: 22px solid;
-  border-color: transparent transparent transparent lightyellow;
-}
+  border-color: transparent transparent transparent #fff; }
 
+/*Right triangle, placed bottom left side slightly in*/
 .tri-right.border.btm-left-in:before {
   content: ' ';
   position: absolute;
@@ -269,8 +455,7 @@ i.ion-ios-paperplane-outline {
   top: auto;
   bottom: -40px;
   border: 20px solid;
-  border-color: #666 transparent transparent #666;
-}
+  border-color: #666 transparent transparent #666; }
 
 .tri-right.btm-left-in:after {
   content: ' ';
@@ -282,9 +467,9 @@ i.ion-ios-paperplane-outline {
   top: auto;
   bottom: -20px;
   border: 12px solid;
-  border-color: lightyellow transparent transparent lightyellow;
-}
+  border-color: #fff transparent transparent #fff; }
 
+/*Right triangle, placed bottom right side slightly in*/
 .tri-right.border.btm-right-in:before {
   content: ' ';
   position: absolute;
@@ -294,8 +479,7 @@ i.ion-ios-paperplane-outline {
   right: 30px;
   bottom: -40px;
   border: 20px solid;
-  border-color: #666 #666 transparent transparent;
-}
+  border-color: #666 #666 transparent transparent; }
 
 .tri-right.btm-right-in:after {
   content: ' ';
@@ -306,8 +490,7 @@ i.ion-ios-paperplane-outline {
   right: 38px;
   bottom: -20px;
   border: 12px solid;
-  border-color: lightyellow lightyellow transparent transparent;
-}
+  border-color: #fff #fff transparent transparent; }
 
 .tri-right.border.btm-right:before {
   content: ' ';
@@ -318,8 +501,7 @@ i.ion-ios-paperplane-outline {
   right: -8px;
   bottom: -40px;
   border: 20px solid;
-  border-color: #666 #666 transparent transparent;
-}
+  border-color: #666 #666 transparent transparent; }
 
 .tri-right.btm-right:after {
   content: ' ';
@@ -330,9 +512,9 @@ i.ion-ios-paperplane-outline {
   right: 0px;
   bottom: -20px;
   border: 12px solid;
-  border-color: lightyellow lightyellow transparent transparent;
-}
+  border-color: #fff #fff transparent transparent; }
 
+/* Right triangle, right side slightly down*/
 .tri-right.border.right-in:before {
   content: ' ';
   position: absolute;
@@ -343,8 +525,7 @@ i.ion-ios-paperplane-outline {
   top: 30px;
   bottom: auto;
   border: 20px solid;
-  border-color: #666 transparent transparent #666;
-}
+  border-color: #666 transparent transparent #666; }
 
 .tri-right.right-in:after {
   content: ' ';
@@ -356,9 +537,9 @@ i.ion-ios-paperplane-outline {
   top: 38px;
   bottom: auto;
   border: 12px solid;
-  border-color: lightyellow transparent transparent lightyellow;
-}
+  border-color: #fff transparent transparent #fff; }
 
+/* Right triangle placed top right flush. */
 .tri-right.border.right-top:before {
   content: ' ';
   position: absolute;
@@ -369,8 +550,7 @@ i.ion-ios-paperplane-outline {
   top: -8px;
   bottom: auto;
   border: 32px solid;
-  border-color: #666 transparent transparent transparent;
-}
+  border-color: #666 transparent transparent transparent; }
 
 .tri-right.right-top:after {
   z-index: -1;
@@ -383,16 +563,17 @@ i.ion-ios-paperplane-outline {
   top: 0px;
   bottom: auto;
   border: 20px solid;
-  border-color: lightyellow transparent transparent transparent;
-}
+  border-color: #fff transparent transparent transparent; }
 
+/* talk bubble contents */
 .talktext {
   padding: 1em;
   text-align: left;
-  line-height: 1.5em;
-}
+  line-height: 1.5em; }
 
 .talktext p {
+  /* remove webkit p margins */
   -webkit-margin-before: 0em;
-  -webkit-margin-after: 0em;
-}
+  -webkit-margin-after: 0em; }
+
+/*# sourceMappingURL=style.css.map */
